# music_box

./: .gitignore
DOC/: 架构设计.md  编码规范.md  项目设计文档.md
music_box/: Amend-cn.md  CMakeLists.txt  sdkconfig  sdkconfig.defaults
music_box/components/device/: CMakeLists.txt
music_box/components/device/include/: dev_audio.h  dev_button.h  dev_display.h  dev_init.h  dev_led_strip.h  dev_light_sensor.h
music_box/components/hal/: CMakeLists.txt
music_box/components/hal/include/: hal_adc.h  hal_i2c.h  hal_timer.h
music_box/components/hal/src/: hal_adc.c  hal_i2c.c  hal_rmt.c
music_box/components/music_box_hal/: CMakeLists.txt
music_box/components/music_box_hal/include/: hal_gpio.h  hal_i2c.h  hal_i2s.h  hal_rmt.h  hal_timer.h
music_box/components/music_box_hal/src/: hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_rmt.c  hal_timer.c
music_box/main/: CMakeLists.txt  main.c
原理图/: ProPrj_esp32八音盒_2026-05-26.epro2
